[fw] disable DMA

--- a/firmwares/art_pi_03/board/CubeMX_Config/CubeMX_Config.ioc
+++ b/firmwares/art_pi_03/board/CubeMX_Config/CubeMX_Config.ioc
@@ -20,7 +20,8 @@ Mcu.IP11=SYS
 Mcu.IP12=TIM5
 Mcu.IP13=UART4
 Mcu.IP14=USART3
-Mcu.IP15=USB_OTG_FS
+Mcu.IP15=USART6
+Mcu.IP16=USB_OTG_FS
 Mcu.IP2=ETH
 Mcu.IP3=FMC
 Mcu.IP4=LTDC
@@ -29,19 +30,21 @@ Mcu.IP6=RCC
 Mcu.IP7=SDMMC1
 Mcu.IP8=SDMMC2
 Mcu.IP9=SPI1
-Mcu.IPNb=16
+Mcu.IPNb=17
 Mcu.Name=STM32H750XBHx
 Mcu.Package=TFBGA240
 Mcu.Pin0=PB5
 Mcu.Pin1=PK5
 Mcu.Pin10=PC11
-Mcu.Pin100=PJ4
-Mcu.Pin101=PG1
-Mcu.Pin102=PE7
-Mcu.Pin103=PE14
-Mcu.Pin104=PB14
-Mcu.Pin105=PD8
-Mcu.Pin106=VP_SYS_VS_Systick
+Mcu.Pin100=PC5
+Mcu.Pin101=PJ3
+Mcu.Pin102=PJ4
+Mcu.Pin103=PG1
+Mcu.Pin104=PE7
+Mcu.Pin105=PE14
+Mcu.Pin106=PB14
+Mcu.Pin107=PD8
+Mcu.Pin108=VP_SYS_VS_Systick
 Mcu.Pin11=PE2
 Mcu.Pin12=PE0
 Mcu.Pin13=PB3 (JTDO/TRACESWO)
@@ -68,78 +71,78 @@ Mcu.Pin31=PC8
 Mcu.Pin32=PC9
 Mcu.Pin33=PA12
 Mcu.Pin34=PA11
-Mcu.Pin35=PG8
-Mcu.Pin36=PF2
-Mcu.Pin37=PF1
-Mcu.Pin38=PF0
-Mcu.Pin39=PG5
+Mcu.Pin35=PC7
+Mcu.Pin36=PC6
+Mcu.Pin37=PG8
+Mcu.Pin38=PF2
+Mcu.Pin39=PF1
 Mcu.Pin4=PE1
-Mcu.Pin40=PI12
-Mcu.Pin41=PI13
-Mcu.Pin42=PI14
-Mcu.Pin43=PF3
-Mcu.Pin44=PG4
-Mcu.Pin45=PG2
-Mcu.Pin46=PK2
-Mcu.Pin47=PH1-OSC_OUT (PH1)
-Mcu.Pin48=PH0-OSC_IN (PH0)
-Mcu.Pin49=PF5
+Mcu.Pin40=PF0
+Mcu.Pin41=PG5
+Mcu.Pin42=PI12
+Mcu.Pin43=PI13
+Mcu.Pin44=PI14
+Mcu.Pin45=PF3
+Mcu.Pin46=PG4
+Mcu.Pin47=PG2
+Mcu.Pin48=PK2
+Mcu.Pin49=PH1-OSC_OUT (PH1)
 Mcu.Pin5=PB4 (NJTRST)
-Mcu.Pin50=PF4
-Mcu.Pin51=PK0
-Mcu.Pin52=PK1
-Mcu.Pin53=PJ11
-Mcu.Pin54=PJ10
-Mcu.Pin55=PC1
-Mcu.Pin56=PC2
-Mcu.Pin57=PC3
-Mcu.Pin58=PJ9
-Mcu.Pin59=PA2
+Mcu.Pin50=PH0-OSC_IN (PH0)
+Mcu.Pin51=PF5
+Mcu.Pin52=PF4
+Mcu.Pin53=PK0
+Mcu.Pin54=PK1
+Mcu.Pin55=PJ11
+Mcu.Pin56=PJ10
+Mcu.Pin57=PC1
+Mcu.Pin58=PC2
+Mcu.Pin59=PC3
 Mcu.Pin6=PK4
-Mcu.Pin60=PA1
-Mcu.Pin61=PA0
-Mcu.Pin62=PJ0
-Mcu.Pin63=PE10
-Mcu.Pin64=PJ8
-Mcu.Pin65=PJ7
-Mcu.Pin66=PJ6
-Mcu.Pin67=PH5
-Mcu.Pin68=PI15
-Mcu.Pin69=PJ1
+Mcu.Pin60=PJ9
+Mcu.Pin61=PA2
+Mcu.Pin62=PA1
+Mcu.Pin63=PA0
+Mcu.Pin64=PJ0
+Mcu.Pin65=PE10
+Mcu.Pin66=PJ8
+Mcu.Pin67=PJ7
+Mcu.Pin68=PJ6
+Mcu.Pin69=PH5
 Mcu.Pin7=PG11
-Mcu.Pin70=PF13
-Mcu.Pin71=PF14
-Mcu.Pin72=PE9
-Mcu.Pin73=PE11
-Mcu.Pin74=PB10
-Mcu.Pin75=PB11
-Mcu.Pin76=PH10
-Mcu.Pin77=PD15
-Mcu.Pin78=PD14
-Mcu.Pin79=PA7
+Mcu.Pin70=PI15
+Mcu.Pin71=PJ1
+Mcu.Pin72=PF13
+Mcu.Pin73=PF14
+Mcu.Pin74=PE9
+Mcu.Pin75=PE11
+Mcu.Pin76=PB10
+Mcu.Pin77=PB11
+Mcu.Pin78=PH10
+Mcu.Pin79=PD15
 Mcu.Pin8=PJ15
-Mcu.Pin80=PF12
-Mcu.Pin81=PF15
-Mcu.Pin82=PE12
-Mcu.Pin83=PE15
-Mcu.Pin84=PJ5
-Mcu.Pin85=PD11
-Mcu.Pin86=PD12
-Mcu.Pin87=PA5
-Mcu.Pin88=PC4
-Mcu.Pin89=PB1
+Mcu.Pin80=PD14
+Mcu.Pin81=PA7
+Mcu.Pin82=PF12
+Mcu.Pin83=PF15
+Mcu.Pin84=PE12
+Mcu.Pin85=PE15
+Mcu.Pin86=PJ5
+Mcu.Pin87=PD11
+Mcu.Pin88=PD12
+Mcu.Pin89=PA5
 Mcu.Pin9=PD6
-Mcu.Pin90=PJ2
-Mcu.Pin91=PF11
-Mcu.Pin92=PG0
-Mcu.Pin93=PE8
-Mcu.Pin94=PE13
-Mcu.Pin95=PB15
-Mcu.Pin96=PD10
-Mcu.Pin97=PD9
-Mcu.Pin98=PC5
-Mcu.Pin99=PJ3
-Mcu.PinsNb=107
+Mcu.Pin90=PC4
+Mcu.Pin91=PB1
+Mcu.Pin92=PJ2
+Mcu.Pin93=PF11
+Mcu.Pin94=PG0
+Mcu.Pin95=PE8
+Mcu.Pin96=PE13
+Mcu.Pin97=PB15
+Mcu.Pin98=PD10
+Mcu.Pin99=PD9
+Mcu.PinsNb=109
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32H750XBHx
@@ -230,6 +233,10 @@ PC5.GPIOParameters=GPIO_Speed
 PC5.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PC5.Mode=RMII
 PC5.Signal=ETH_RXD1
+PC6.Mode=Asynchronous
+PC6.Signal=USART6_TX
+PC7.Mode=Asynchronous
+PC7.Signal=USART6_RX
 PC8.Mode=SD_4_bits_Wide_bus
 PC8.Signal=SDMMC1_D0
 PC9.Mode=SD_4_bits_Wide_bus
@@ -556,7 +563,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=MDK-ARM V5.27
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_ETH_Init-ETH-false-HAL-true,4-MX_FMC_Init-FMC-false-HAL-true,5-MX_LTDC_Init-LTDC-false-HAL-true,6-MX_SDMMC1_SD_Init-SDMMC1-false-HAL-true,7-MX_SDMMC2_SD_Init-SDMMC2-false-HAL-true,8-MX_SPI4_Init-SPI4-false-HAL-true,9-MX_UART4_Init-UART4-false-HAL-true,10-MX_SPI1_Init-SPI1-false-HAL-true,11-MX_USART3_UART_Init-USART3-false-HAL-true,12-MX_USB_OTG_FS_PCD_Init-USB_OTG_FS-false-HAL-true,13-MX_ADC1_Init-ADC1-false-HAL-true,14-MX_TIM5_Init-TIM5-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_ETH_Init-ETH-false-HAL-true,4-MX_FMC_Init-FMC-false-HAL-true,5-MX_LTDC_Init-LTDC-false-HAL-true,6-MX_SDMMC1_SD_Init-SDMMC1-false-HAL-true,7-MX_SDMMC2_SD_Init-SDMMC2-false-HAL-true,8-MX_SPI4_Init-SPI4-false-HAL-true,9-MX_UART4_Init-UART4-false-HAL-true,10-MX_SPI1_Init-SPI1-false-HAL-true,11-MX_USART3_UART_Init-USART3-false-HAL-true,12-MX_USB_OTG_FS_PCD_Init-USB_OTG_FS-false-HAL-true,13-MX_ADC1_Init-ADC1-false-HAL-true,14-MX_TIM5_Init-TIM5-false-HAL-true,15-MX_USART6_UART_Init-USART6-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
 RCC.ADCFreq_Value=400000000
 RCC.AHB12Freq_Value=240000000
 RCC.AHB4Freq_Value=240000000
@@ -725,8 +732,8 @@ SH.FMC_SDNWE.0=FMC_SDNWE,13b-sda1
 SH.FMC_SDNWE.ConfNb=1
 SH.S_TIM5_CH1.0=TIM5_CH1,PWM Generation1 CH1
 SH.S_TIM5_CH1.ConfNb=1
-SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_2
-SPI1.CalculateBaudRate=200.0 MBits/s
+SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_4
+SPI1.CalculateBaudRate=100.0 MBits/s
 SPI1.Direction=SPI_DIRECTION_2LINES
 SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler
 SPI1.Mode=SPI_MODE_MASTER
@@ -741,6 +748,8 @@ TIM5.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM5.IPParameters=Channel-PWM Generation1 CH1
 USART3.IPParameters=VirtualMode-Asynchronous
 USART3.VirtualMode-Asynchronous=VM_ASYNC
+USART6.IPParameters=VirtualMode-Asynchronous
+USART6.VirtualMode-Asynchronous=VM_ASYNC
 USB_OTG_FS.IPParameters=VirtualMode
 USB_OTG_FS.VirtualMode=Device_Only
 VP_SYS_VS_Systick.Mode=SysTick
