--- a/firmwares/art_pi_04/board/CubeMX_Config/CubeMX_Config.ioc
+++ b/firmwares/art_pi_04/board/CubeMX_Config/CubeMX_Config.ioc
@@ -19,8 +19,9 @@ Mcu.IP10=SPI4
 Mcu.IP11=SYS
 Mcu.IP12=TIM5
 Mcu.IP13=UART4
-Mcu.IP14=USART3
-Mcu.IP15=USB_OTG_FS
+Mcu.IP14=UART5
+Mcu.IP15=USART3
+Mcu.IP16=USB_OTG_FS
 Mcu.IP2=ETH
 Mcu.IP3=FMC
 Mcu.IP4=LTDC
@@ -29,19 +30,21 @@ Mcu.IP6=RCC
 Mcu.IP7=SDMMC1
 Mcu.IP8=SDMMC2
 Mcu.IP9=SPI1
-Mcu.IPNb=16
+Mcu.IPNb=17
 Mcu.Name=STM32H750XBHx
 Mcu.Package=TFBGA240
 Mcu.Pin0=PB5
 Mcu.Pin1=PK5
 Mcu.Pin10=PC11
-Mcu.Pin100=PJ4
-Mcu.Pin101=PG1
-Mcu.Pin102=PE7
-Mcu.Pin103=PE14
-Mcu.Pin104=PB14
-Mcu.Pin105=PD8
-Mcu.Pin106=VP_SYS_VS_Systick
+Mcu.Pin100=PJ3
+Mcu.Pin101=PJ4
+Mcu.Pin102=PG1
+Mcu.Pin103=PE7
+Mcu.Pin104=PE14
+Mcu.Pin105=PB13
+Mcu.Pin106=PB14
+Mcu.Pin107=PD8
+Mcu.Pin108=VP_SYS_VS_Systick
 Mcu.Pin11=PE2
 Mcu.Pin12=PE0
 Mcu.Pin13=PB3 (JTDO/TRACESWO)
@@ -134,12 +137,12 @@ Mcu.Pin91=PF11
 Mcu.Pin92=PG0
 Mcu.Pin93=PE8
 Mcu.Pin94=PE13
-Mcu.Pin95=PB15
-Mcu.Pin96=PD10
-Mcu.Pin97=PD9
-Mcu.Pin98=PC5
-Mcu.Pin99=PJ3
-Mcu.PinsNb=107
+Mcu.Pin95=PB12
+Mcu.Pin96=PB15
+Mcu.Pin97=PD10
+Mcu.Pin98=PD9
+Mcu.Pin99=PC5
+Mcu.PinsNb=109
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32H750XBHx
@@ -192,6 +195,11 @@ PB10.Mode=Asynchronous
 PB10.Signal=USART3_TX
 PB11.Mode=Asynchronous
 PB11.Signal=USART3_RX
+PB12.Mode=Asynchronous
+PB12.Signal=UART5_RX
+PB13.Locked=true
+PB13.Mode=Asynchronous
+PB13.Signal=UART5_TX
 PB14.Mode=SD_4_bits_Wide_bus
 PB14.Signal=SDMMC2_D0
 PB15.Mode=SD_4_bits_Wide_bus
@@ -725,8 +733,8 @@ SH.FMC_SDNWE.0=FMC_SDNWE,13b-sda1
 SH.FMC_SDNWE.ConfNb=1
 SH.S_TIM5_CH1.0=TIM5_CH1,PWM Generation1 CH1
 SH.S_TIM5_CH1.ConfNb=1
-SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_2
-SPI1.CalculateBaudRate=200.0 MBits/s
+SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_4
+SPI1.CalculateBaudRate=100.0 MBits/s
 SPI1.Direction=SPI_DIRECTION_2LINES
 SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler
 SPI1.Mode=SPI_MODE_MASTER
