[fw] finish lvgl demo

--- a/firmwares/art_pi_06/board/CubeMX_Config/CubeMX_Config.ioc
+++ b/firmwares/art_pi_06/board/CubeMX_Config/CubeMX_Config.ioc
@@ -20,8 +20,9 @@ Mcu.IP11=SPI4
 Mcu.IP12=SYS
 Mcu.IP13=TIM5
 Mcu.IP14=UART4
-Mcu.IP15=USART3
-Mcu.IP16=USB_OTG_FS
+Mcu.IP15=UART5
+Mcu.IP16=USART3
+Mcu.IP17=USB_OTG_FS
 Mcu.IP2=ETH
 Mcu.IP3=FMC
 Mcu.IP4=LTDC
@@ -30,23 +31,25 @@ Mcu.IP6=RCC
 Mcu.IP7=SDMMC1
 Mcu.IP8=SDMMC2
 Mcu.IP9=SPI1
-Mcu.IPNb=17
+Mcu.IPNb=18
 Mcu.Name=STM32H750XBHx
 Mcu.Package=TFBGA240
 Mcu.Pin0=PB5
 Mcu.Pin1=PK5
 Mcu.Pin10=PD6
-Mcu.Pin100=PD9
-Mcu.Pin101=PC5
-Mcu.Pin102=PJ3
-Mcu.Pin103=PJ4
-Mcu.Pin104=PG1
-Mcu.Pin105=PE7
-Mcu.Pin106=PE14
-Mcu.Pin107=PB14
-Mcu.Pin108=PD8
-Mcu.Pin109=VP_SYS_VS_Systick
+Mcu.Pin100=PD10
+Mcu.Pin101=PD9
+Mcu.Pin102=PC5
+Mcu.Pin103=PJ3
+Mcu.Pin104=PJ4
+Mcu.Pin105=PG1
+Mcu.Pin106=PE7
+Mcu.Pin107=PE14
+Mcu.Pin108=PB13
+Mcu.Pin109=PB14
 Mcu.Pin11=PC11
+Mcu.Pin110=PD8
+Mcu.Pin111=VP_SYS_VS_Systick
 Mcu.Pin12=PI2
 Mcu.Pin13=PE2
 Mcu.Pin14=PE0
@@ -141,9 +144,9 @@ Mcu.Pin94=PF11
 Mcu.Pin95=PG0
 Mcu.Pin96=PE8
 Mcu.Pin97=PE13
-Mcu.Pin98=PB15
-Mcu.Pin99=PD10
-Mcu.PinsNb=110
+Mcu.Pin98=PB12
+Mcu.Pin99=PB15
+Mcu.PinsNb=112
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32H750XBHx
@@ -196,6 +199,11 @@ PB10.Mode=Asynchronous
 PB10.Signal=USART3_TX
 PB11.Mode=Asynchronous
 PB11.Signal=USART3_RX
+PB12.Mode=Asynchronous
+PB12.Signal=UART5_RX
+PB13.Locked=true
+PB13.Mode=Asynchronous
+PB13.Signal=UART5_TX
 PB14.Mode=SD_4_bits_Wide_bus
 PB14.Signal=SDMMC2_D0
 PB15.Mode=SD_4_bits_Wide_bus
@@ -566,7 +574,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=MDK-ARM V5.27
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_ETH_Init-ETH-false-HAL-true,4-MX_FMC_Init-FMC-false-HAL-true,5-MX_LTDC_Init-LTDC-false-HAL-true,6-MX_SDMMC1_SD_Init-SDMMC1-false-HAL-true,7-MX_SDMMC2_SD_Init-SDMMC2-false-HAL-true,8-MX_SPI4_Init-SPI4-false-HAL-true,9-MX_UART4_Init-UART4-false-HAL-true,10-MX_SPI1_Init-SPI1-false-HAL-true,11-MX_USART3_UART_Init-USART3-false-HAL-true,12-MX_USB_OTG_FS_PCD_Init-USB_OTG_FS-false-HAL-true,13-MX_ADC1_Init-ADC1-false-HAL-true,14-MX_TIM5_Init-TIM5-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_ETH_Init-ETH-false-HAL-true,4-MX_FMC_Init-FMC-false-HAL-true,5-MX_LTDC_Init-LTDC-false-HAL-true,6-MX_SDMMC1_SD_Init-SDMMC1-false-HAL-true,7-MX_SDMMC2_SD_Init-SDMMC2-false-HAL-true,8-MX_SPI4_Init-SPI4-false-HAL-true,9-MX_UART4_Init-UART4-false-HAL-true,10-MX_SPI1_Init-SPI1-false-HAL-true,11-MX_USART3_UART_Init-USART3-false-HAL-true,12-MX_USB_OTG_FS_PCD_Init-USB_OTG_FS-false-HAL-true,13-MX_ADC1_Init-ADC1-false-HAL-true,14-MX_TIM5_Init-TIM5-false-HAL-true,15-MX_SPI2_Init-SPI2-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
 RCC.ADCFreq_Value=400000000
 RCC.AHB12Freq_Value=240000000
 RCC.AHB4Freq_Value=240000000
